# OS

./: pyproject.toml
Arch_installation_script/: main.py  pyproject.toml
arch_setup_script/: main.py  pyproject.toml
artix_install_script/: install.py  pyproject.toml  setup.py
custom-archiso/: packages.x86_64
custom-archiso/airootfs/root/: install.py  setup.py
fuzzel/: fuzzel.ini
niri/: config.kdl
qtile/: config.py  pyproject.toml
qtile/env/: Hyperparameters.env  system_colors.env
qtile/scripts/: autostart.py  live_theme.py  pywal_change_theme.py  volume.py  waybar.py
waybar/: config.jsonc  style.css
zsh/: zsh.zshrc
